Added english translations

--- a/src/assets/i18n/en.json
+++ b/src/assets/i18n/en.json
@@ -35,7 +35,7 @@
       "SUBTITLE": "3. International Conference \"No to Military Bases & Wars\""
     },
     "ABENDVERANSTALTUNG": {
-      "TITLE": "Evening Event",
+      "TITLE": "Soiree",
       "SUBTITLE": "28.06.2019 from 19.00"
     },
     "DEMONSTRATION": {
