--- a/src/assets/i18n/en.json
+++ b/src/assets/i18n/en.json
@@ -70,7 +70,8 @@
       "Mil": "Militärmacht global und Kriege",
       "Fri": "Friedensbewegung",
       "Fem": "Feminism"
-    }
+    },
+    "BACK_BUTTON_LABEL": "Back to list"
   },
   "FAVORITES_PAGE": {
     "NO_FAVORITE": "Please favorite events on the page <strong>Events</strong>"
